added map and stuff

--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
-<html lang="fr">    
+<html lang="co">    
       <head>    
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">    
-        <title>Veille Techno</title>    
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+        <meta name="theme-color" content="#4ea832">
+        <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="images/favicon/favicon.png" type="image/png">
+        <link rel="icon" sizes="32x32" href="images/favicon/favicon-32.png" type="image/png">
+        <link rel="icon" sizes="64x64" href="images/favicon/favicon-64.png" type="image/png">
+        <link rel="icon" sizes="96x96" href="images/favicon/favicon-96.png" type="image/png">
+        <link rel="icon" sizes="196x196" href="images/favicon/favicon-196.png" type="image/png">
+        <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="images/favicon/favicon-144.png">
+        <meta name="msapplication-TileColor" content="#FFFFFF">
+        <title>Induve Festighjà ????</title>    
+        <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="vendors/bootstrap4.min.css">
         <link href="style.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+        crossorigin=""></script>
       </head>    
       <body id="page-top">
-            <div class="row">
-                <div class="col">accueil</div>
-                <div class="col">technos</div>
-                <div class="col">contact</div>
-            </div>
-        <h1>Accueil</h1>
-        <h2>Technologies à veiller</h2>
-        <div id="technos"></div>
+         A U Celentu, Brusgia U Celu Mel'Aranciu.
+
+        <div id="map" style="height: 440px; border: 1px solid #AAA;"></div>
+
+        <script type='text/javascript' src='map/map.js'></script>
         <script src="main.js"></script>
+
       </body>
 </html>
