--- a/addSnap.html
+++ b/addSnap.html
@@ -24,20 +24,54 @@
         <link rel="stylesheet" href="vendors/bootstrap4.min.css">
         <link href="style.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-        crossorigin=""/>
-        <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-        crossorigin=""></script>
       </head>    
       <body id="page-top" style="height: 100vh; width: 100vw;">
-        <div>A U Celentu, Brusgia U Celu Mel'Aranciu. <input type="button" id="centerGeo" value="Truvassi" onclick="setUserMap();" class="btnStyle span3" /> <a href="addSnap.html">Aghjunghjà</a>  </div>
 
-        <div>
-          <div id="map" style="height: 100%; border: 1px solid #AAA;"></div>
+        <div> <a href="index.html">Accogliu</a> </div>
+
+        <div id="addform">
+                <form id="add-techno-form">
+                    <input type="text" placeholder="lat" id="lat"><br> 
+                    <input type="text" placeholder="long" id="long"><br>
+                    <input type="text" placeholder="date" id="date"><br>    
+                    <input type="text" placeholder="videoname" id="videoname"><br>                  
+                    <button type="submit">ajouter</button>
+                </form>
         </div>
 
-        <script type='text/javascript' src="functions.js"></script>
-        <script type='text/javascript' src="main.js"></script>
 
-      </body>
+
+        <video id="video" width="640" height="480" autoplay></video>
+        <button id="snap">Snap Photo</button>
+        <canvas id="canvas" width="640" height="480"></canvas>
+
+        <script type="text/javascript" src="addSnap.js"></script>
+        <script type="text/javascript" src="idb/database.js"></script>
+        <script type="text/javascript" src="idb/idb.js"></script>
+
+        <script>
+            // var video = document.getElementById('video');
+
+            // // Get access to the camera!
+            // if(navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+            //     // Not adding `{ audio: true }` since we only want video now
+            //     navigator.mediaDevices.getUserMedia({ video: true }).then(function(stream) {
+            //         //video.src = window.URL.createObjectURL(stream);
+            //         video.srcObject = stream;
+            //         video.play();
+            //     });
+            // }
+
+            // var canvas = document.getElementById('canvas');
+            // var context = canvas.getContext('2d');
+            // var video = document.getElementById('video');
+
+            // // Trigger photo take
+            // document.getElementById("snap").addEventListener("click", function() {
+            //     context.drawImage(video, 0, 0, 640, 480);
+            // });
+
+        </script>
+
+    </body>
 </html>
